--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <p>건전예술방</p>
             <span>
               Goid
             </span>
