--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>
               디스코드 건전예술방 커뮤니티
             </p>
-            <a href="https://discord.gg/VTVNhddQVZ">
+            <a href="https://discord.gg/pumTEwNhwD">
               디스코드 서버 참여
             </a>
           </div>
