--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   
 
   <title>건전예술방</title>
+  <meta content="건전예술방" property="og:title" />
+  <meta content="건전예술방 웹사이트" property="og:description" />
+  <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+  <meta content="https://embed.com/embedimage.png" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
