--- a/index.html
+++ b/index.html
@@ -80,7 +80,17 @@
   <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    var mySwiper = new Swiper(".swiper", {
+      // Your Swiper configuration options here
+      loop: true,
+      // Add other options as needed
+    });
+  });
+</script>
   <!-- Slider main container -->
   <div class="swiper">
     <!-- Additional required wrapper -->
@@ -101,11 +111,11 @@
     <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
   </div>
-
+  <script type="text/javascript" src="js/sw.js"></script>
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/sw.js"></script>
+  
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
 
