--- a/index.html
+++ b/index.html
@@ -32,6 +32,34 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
+
+<body class="sub_page">
+  <div class="hero_area_a">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <div class="navbar-collapse" id="">
+            <div class="custom_menu-btn">
+              <button onclick="openNav()">
+                <span class="s-1"> </span>
+                <span class="s-2"> </span>
+                <span class="s-3"> </span>
+              </button>
+            </div>
+            <div id="myNav" class="overlay">
+              <div class="overlay-content">
+                <a href="index.html">메인</a>
+                <a href="attention.html">공지사항</a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- end header section -->
+  </div>
+
   <!-- about section -->
   <section class="about_section layout_margin">
     <div class="container-fluid">
