--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <div class="overlay-content">
                 <a href="index.html">메인</a>
                 <a href="attention.html">공지사항</a>
+                <a href="ai.html">인공지능 도우미</a>
               </div>
             </div>
           </div>
