--- a/attention.html
+++ b/attention.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    </head>
+    
     <body>
         죄송합니다. 현재 페이지는 개발중입니다.
     </body>
