--- a/ai.html
+++ b/ai.html
@@ -9,30 +9,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <style>
-    body {
-        font-family: Arial, sans-serif;
-    }
-    #chatbox {
+      body {
+            font-family: 'Roboto', Arial, sans-serif;
+            background-color: #F4F6F8;
+        }
+          #chatbotName {
+            text-align: center;
+            font-size: 1.5em;
+            margin-top: 50px;
+            color: #31363A;
+        }
+      #chatbox {
+            width: 80%;
+            height: 500px;
+            padding: 20px;
+            margin: 30px auto;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);
+            overflow-y: auto;
+        }
+
+      #userInput {
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        gap: 10px;
         width: 80%;
-        height: 400px;
-        border: 1px solid #000;
-        padding: 10px;
-        overflow-y: scroll;
         margin: 0 auto;
+        }
+      .userMessage {
+            color: #1bac63;
+            margin: 10px 0;
+        }
+      .aiMessage {
+            color: #007bff;
+            margin: 10px 0;
+        }
+
+      #message {
+      flex-grow: 1;
+      padding: 10px;
+      border-radius: 20px;
+      border: none;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      font-size: 1em;
+      }
+      #submit {
+        background-color: #1131e9;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 20px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        font-size: 1em;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
     }
-    #userInput {
-        width: 80%;
-        margin: 20px auto;
+
+    #submit:hover {
+        background-color: #0c2885;
+        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
+        transform: translateY(-7px);
     }
-    .userMessage {
-        color: blue;
-        margin: 5px 0;
-    }
-    .aiMessage {
-        color: green;
-        margin: 5px 0;
-    }
-</style>
+ 
+  </style>
   <title>건전예술방 체르타</title>
   <meta content="건전예술방 인공지능 도우미" property="og:title" />
   <meta content="건전예술방 인공지능 도우미 웹사이트" property="og:description" />
@@ -83,15 +124,17 @@
       </header>
       <!-- end header section -->
     </div>
-
+    <div id="chatbotName">
+      건전예술방 인공지능 도우미 체르타
+    </div>
 
     <div id="chatbox">
       <!-- Chat messages will be appended here -->
     </div>
 
     <div id="userInput">
-        <input id="message" type="text" placeholder="Type your message here..." />
-        <button id="submit">Send</button>
+        <textarea style="resize: none;" id="message" type="text" placeholder="체르타에게 보낼 메시지를 써주세요..."></textarea>
+        <button id="submit">전송!</button>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
