--- a/ai.html
+++ b/ai.html
@@ -114,6 +114,7 @@
               <div id="myNav" class="overlay">
                 <div class="overlay-content">
                   <a href="index.html">메인</a>
+                  <a href="index.html">규칙</a>
                   <a href="attention.html">공지사항</a>
                   <a href="ai.html">인공지능 도우미</a>
                 </div>
