--- a/ai.html
+++ b/ai.html
@@ -74,6 +74,8 @@
     }
  
   </style>
+  <link rel="icon" href="/images/devicon.png"/>
+  <link rel="apple-touch-icon" href="/images/devicon.png"/>
   <title>건전예술방 체르타</title>
   <meta content="건전예술방 인공지능 도우미" property="og:title" />
   <meta content="건전예술방 인공지능 도우미 웹사이트" property="og:description" />
