--- a/attention.html
+++ b/attention.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="icon" href="/images/devicon.png"/>
+        <link rel="apple-touch-icon" href="/images/devicon.png"/>
+        <title>건전예술방 공지사항</title>
     </head>
     
     <body>
