--- a/rule.html
+++ b/rule.html
@@ -6,7 +6,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   
-
+  <link rel="icon" href="/images/devicon.png"/>
+  <link rel="apple-touch-icon" href="/images/devicon.png"/>
   <title>건전예술방</title>
   <meta content="건전예술방" property="og:title" />
   <meta content="건전예술방 웹사이트" property="og:description" />
