--- a/attention.html
+++ b/attention.html
@@ -46,9 +46,9 @@
         margin-top: 40px;  /* 헤더 밑에 좀 더 내려서 선 추가 */
     }
     .separator1 {
-        height: 10px;
+        height: 1px;
         background-color: #ffffff;
-        margin-top: 40px;  /* 헤더 밑에 좀 더 내려서 선 추가 */
+        margin-top: 17px;  /* 헤더 밑에 좀 더 내려서 선 추가 */
     }
 
     </style>
@@ -95,6 +95,7 @@
       </div>
     </header>
     <!-- end header section -->
+    <div class="separator1"></div>
     <div class="separator"></div>
   </div>
   <div class="nana-container">
