--- a/attention.html
+++ b/attention.html
@@ -117,7 +117,7 @@
     <div class="separator"></div>
   </div>
   <div class="nana-container">
-    <object type="image/svg+xml" data="/images/fasdsd.svg" class="nana"></object>
+    <object type="image/svg+xml" data="/images/lastsv.svg" class="nana"></object>
   </div>
     <div class="separator"></div>
     <main class="container mt-3">
